mahattat al nesyan upload

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<h1>hi</h1>
+<h1>
+  محطات النسيان برعاية الففينو
+</h1>
+
+<img src="assets/wallpaper.jpg" />
+<br />
+
+<audio autoplay loop controls>
+  <source src="assets/corona.mp3" type="audio/mp3" />
+</audio>
